--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "webpack-react-app",
+  "homepage": "https://thomasjodt.github.io",
+  "name": "thomasjodt-portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production"
   },
@@ -12,7 +15,7 @@
     "JavaScript",
     "React"
   ],
-  "author": "name <email>",
+  "author": "Orlando Díaz jodt5200@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -30,6 +33,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1"
