--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/main.js",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
