Added a flag to vite preview script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite --host --open --port 3000",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --open",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
